<resources>
    <string name="app_name">FlashVideo</string>

    <string name="tip_go_music">start music</string>
    <string name="tip_go_video">start video</string>
    <string name="tip_go_camera">start camera</string>
    <string name="tip_go_video_player">start video player</string>
    <string name="tip_go_editor">start editor</string>
    <string name="tip_go_face_detect">start face detect</string>
    <string name="tip_go_img_edit">start image edit</string>

    <string name="tip_init">init</string>
    <string name="tip_play">play</string>
    <string name="tip_pause">pause</string>
    <string name="tip_stop">stop</string>
    <string name="tip_progress">Progress</string>
    <string name="tip_volume">Volume</string>
    <string name="tip_pitch_0.5">Pitch x 0.5</string>
    <string name="tip_pitch_1.0">Pitch Original</string>
    <string name="tip_pitch_1.5">Pitch x 1.5</string>
    <string name="tip_pitch_2.0">Pitch x 2.0</string>
    <string name="tip_tempo_0.5">Tempo x 0.5</string>
    <string name="tip_tempo_1.0">Tempo Original</string>
    <string name="tip_tempo_1.5">Tempo x 1.5</string>
    <string name="tip_tempo_2.0">Tempo x 2.0</string>

    <string name="tip_success">success</string>
    <string name="tip_fail">fail</string>

    <string name="tip_front_camera">front camera</string>
    <string name="tip_back_camera">back camera</string>
    <string name="tip_capture">capture</string>
    <string name="tip_contrast">Contrast</string>
    <string name="tip_sharpen">Sharpen</string>
    <string name="tip_saturation">Saturation</string>
    <string name="tip_hor_blur">Horizontal</string>
    <string name="tip_ver_blur">Vertical</string>
    <string name="tip_threshold">Threshold</string>
    <string name="tip_quantization">Quanti</string>
    <string name="tip_blur">blur</string>
    <string name="tip_beauty">beauty</string>
    <string name="tip_start_record">start record</string>
    <string name="tip_stop_record">stop record</string>

    <string name="msg_default_time">00:00:00</string>

    <string name="tip_metadata_time_unset">total time:</string>
    <string name="tip_metadata_time">total time: %1$s</string>
    <string name="tip_select_media">current select : %1$s</string>
    <string name="tip_multiple_media">multiple media, needs to select one</string>
    <string name="tip_prepare_edit">prepare edit</string>
    <string name="tip_start_edit">start edit</string>
    <string name="tip_stop_edit">stop edit</string>

    <string name="tip_init_face_detector">Init face detector</string>
    <string name="tip_detect">detect face</string>
    <string name="tip_adapt_contrast">adapt contrast</string>

    <string name="tip_beautify">Beautify</string>
    <string name="tip_denoise">Denoise</string>
    <string name="tip_clear">Clear</string>
</resources>