<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/tip_go_music"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:enabled="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/tip_go_video"
        app:layout_constraintLeft_toRightOf="@+id/btn_start_music"
        app:layout_constraintTop_toTopOf="@+id/btn_start_music"
        android:layout_marginStart="10dp"
        android:enabled="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/tip_go_camera"
        app:layout_constraintLeft_toRightOf="@+id/btn_start_video"
        app:layout_constraintTop_toTopOf="@+id/btn_start_video"
        android:layout_marginStart="10dp"
        android:enabled="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start_video_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/tip_go_video_player"
        app:layout_constraintLeft_toLeftOf="@+id/btn_start_music"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_music"
        android:layout_marginTop="10dp"
        android:enabled="false" />

</androidx.constraintlayout.widget.ConstraintLayout>