<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_init"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:text="@string/tip_init"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_init"
        app:layout_constraintTop_toTopOf="@+id/btn_init"
        android:layout_marginStart="10dp"
        android:textAllCaps="false"
        android:text="@string/tip_play"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_play"
        app:layout_constraintTop_toTopOf="@+id/btn_play"
        android:layout_marginStart="10dp"
        android:textAllCaps="false"
        android:text="@string/tip_pause"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_pause"
        app:layout_constraintTop_toTopOf="@+id/btn_pause"
        android:layout_marginStart="10dp"
        android:textAllCaps="false"
        android:text="@string/tip_stop"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/btn_init"
        app:layout_constraintTop_toBottomOf="@+id/btn_init"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:text="@string/tip_progress" />

    <TextView
        android:id="@+id/tv_current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_progress"
        android:layout_marginTop="5dp"
        android:textAllCaps="false"
        android:text="@string/msg_default_time"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/tv_total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_current_time"
        android:textAllCaps="false"
        android:text="@string/msg_default_time"
        android:textSize="15sp"/>

    <SeekBar
        android:id="@+id/progress_bar"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:max="100"
        app:layout_constraintTop_toTopOf="@+id/tv_current_time"
        app:layout_constraintLeft_toRightOf="@+id/tv_current_time"
        app:layout_constraintRight_toLeftOf="@+id/tv_total_time"/>

    <TextView
        android:id="@+id/tv_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/tv_progress"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_time"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:text="@string/tip_volume" />

    <SeekBar
        android:id="@+id/volume_bar"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:max="100"
        app:layout_constraintTop_toBottomOf="@+id/tv_volume"
        app:layout_constraintLeft_toRightOf="@+id/tv_current_time"
        app:layout_constraintRight_toLeftOf="@+id/tv_total_time"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_pitch_0_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/btn_init"
        app:layout_constraintTop_toBottomOf="@+id/volume_bar"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:text="@string/tip_pitch_0.5"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_pitch_1_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_pitch_0_5"
        app:layout_constraintTop_toTopOf="@+id/btn_pitch_0_5"
        android:layout_marginStart="10dp"
        android:textAllCaps="false"
        android:text="@string/tip_pitch_1.0"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_pitch_1_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/btn_pitch_1_0"
        app:layout_constraintTop_toTopOf="@+id/btn_pitch_1_0"
        android:layout_marginStart="10dp"
        android:textAllCaps="false"
        android:text="@string/tip_pitch_1.5"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_pitch_2_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/btn_init"
        app:layout_constraintTop_toBottomOf="@+id/btn_pitch_0_5"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:text="@string/tip_pitch_2.0"
        android:textSize="18sp" />

</androidx.constraintlayout.widget.ConstraintLayout>